syntax = "proto3";

option go_package = "../../src/grpc/actorpb;actorpb";

message GetActorBasicInforRequestModel {
    repeated string actor_ids = 1;
}

message ActorBasicInfo {
    string id = 1;
    string name = 2;
}

message GetActorBasicInforResponseModel {
    bool has_error = 1;
    repeated ActorBasicInfo actors = 2;
}

service ActorsService {
    rpc GetActorBasicInfo(GetActorBasicInforRequestModel) returns (GetActorBasicInforResponseModel) {}
}
