syntax = "proto3";

option go_package = "../../src/grpc/moviepb;moviepb";

message GetMovieResponse {
    bool has_error = 1;
    string id = 2;
    string title = 3;
    string release_year = 4;
    repeated string genres = 5;
    repeated ActorInfo actors = 6;
}

message ActorInfo {
    string id = 1;
    string name = 2;
    string role = 3;
}

message GetMovieRequest {
    string movie_id = 1;
}

service MovieService {
    rpc GetMovieDetails(GetMovieRequest) returns (GetMovieResponse) {}
}