syntax = "proto3";

option go_package = "../../src/grpc/userpb;userpb";

message GetUserInfoResponse {
    bool has_error = 1;
    string id = 2;
    string name = 3;
    string email = 4;
}

message GetUserInfoRequest {
    string user_id = 1;
}

service UserService {
    rpc GetUserBasicInfo(GetUserInfoRequest) returns (GetUserInfoResponse) {}
}